--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 					</div>
 				</form>
 				<div style="text-align:center;padding:5px 0">
-					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitForm1()" style="width:80px">Submit</a>
-					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="clearForm1()" style="width:80px">Clear</a>
+					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitForm1()" style="width:80px">提交</a>
+					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="clearForm1()" style="width:80px">重置</a>
 				</div>
 			</div>
 			<div title="微信机器人-群发图文">
@@ -64,8 +64,8 @@
 					</div>
 				</form>
 				<div style="text-align:center;padding:5px 0">
-					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitForm2()" style="width:80px">Submit</a>
-					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="clearForm2()" style="width:80px">Clear</a>
+					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitForm2()" style="width:80px">提交</a>
+					<a href="javascript:void(0)" class="easyui-linkbutton" onclick="clearForm2()" style="width:80px">重置</a>
 				</div>
 			</div>
 		</div>
